# hoolieats

./: .flake8  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
hoolieats/: __init__.py  app.py  constants.py  models.py
hoolieats-dbt/: .user.yml  dbt_project.yml  profiles.yml
hoolieats-dbt/models/: README.md
hoolieats-dbt/models/base/: models.yml  ratings.sql  ratings_base.sql  restaurants_denorm.sql  users_denorm.sql
hoolieats-dbt/models/clean/: models.yml  ratings.sql  restaurants.sql  users.sql
hoolieats-dbt/seeds/: geoplaces2.csv
hoolieats/pages/: cprofile.py  rating_behavior.py  restaurant_profile.py  rprofile.py  user_profile.py
hoolieats/sql/: __init__.py  etl.py  rating_behavior.py  restaurant_profile.py  user_profile.py
hoolieats/utils/: common.py  plot_utils.py
src/: app.py
src/config/: config.py
src/etl/: etl.py  nukedb.py
src/pages/: cprofile.py  rating_behavior.py  rprofile.py
src/sql/: cprofile_sql.py  rating_behavior_sql.py  rprofile_sql.py
src/utils/: common.py  plot_utils.py
