[tool.poetry]
name = "hoolieats"
version = "0.1.0"
description = ""
authors = ["gamberooni <zhaoyoong@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
dbt-duckdb = "^1.2.0"
duckdb = "^0.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
